2012-12-30: Added Formotion module. This allows for tighter integration with Formotion
            Changed options for columns such that any arbitrary values can be inserted
            allowing for future expansion.

2012-12-14: Added lots of framework to validations
            Added validations for length, format, email, presence
            Added array type (thanks justinmcp)

2012-12-07: Added MIT license file.
            InputHelpers: Whitespace cleanup. Fixed keyboard show/hide to scroll to correct position.
            MotionModel::Column: Whitespace cleanup, added code to support cascading delete (:dependent => :destroy)
            MotionModel::Model: Whitespace cleanup, added code to support cascading destroy, destroy_all, and cascading if specified.
            relation_spec.rb: removed delete tests into cascading_delete_spec.rb

2012-12-06: Work on has_many to add cascading delete

MotionModel: POTENTIAL CODE-BREAKING CHANGE. has_many now takes two arguments
             only. Previously, it would allow a list of symbols or strings,
             now it conforms more to the Rails way of one call per relation.
             E.g.:

             has_many :pets

             -or-

             has_many :pets, :delete => :destroy  # cascade delete.

2012-10-14: Primary New Feature: Notifications

MotionModel: Added bulk update, which suppresses notifications and added it to delete_all.
MotionModel: Added notifications of type MotionModelDataDidChangeNotification on data change.
MotionModel: Added classification code to save to differentiate between save-new and update
MotionModel: Added notification calls to save and delete


2012-09-05: Basically rewrote how the data is stored.

The API remains consistent, but a certain amount of
efficiency is added by adding hashes to map column names
to the column metadata.

* Type casting now works, and is a function of initialization
  and of assignment.

* Default values have been added to fill in values